--- a/templates/public/perfil/baseperfil.html
+++ b/templates/public/perfil/baseperfil.html
@@ -14,7 +14,7 @@
                         <div class="offcanvas-body">
                             <div class="pb-2 pb-lg-0 mb-4 mb-lg-5">
                                 <h3 class="h5 mb-1">Hola {{ request.user.first_name }}</h3>
-                                <p class="fs-sm text-muted mb-0">Portal de Consultas</p>
+                                <p class="fs-sm text-muted mb-0">ICTIAIR</p>
                             </div>
                             <nav class="nav flex-column pb-2 pb-lg-4 mb-3">
                                 <h4 class="fs-xs fw-medium text-muted text-uppercase pb-1 mb-2">Cuenta</h4>
