--- a/templates/public/landing/landing.html
+++ b/templates/public/landing/landing.html
@@ -19,8 +19,7 @@
             <div class="container position-relative zindex-5 py-sm-4 py-lg-5 mt-4">
                 <div class="row pt-lg-2 py-xl-4 py-xxl-5 mb-md-4 mb-lg-5">
                     <div class="col-md-10 col-lg-9 col-xl-8 col-xxl-7 pt-5 mb-5 center-mobile">
-                        <h1 class="display-2 text-uppercase pb-sm-2 pb-md-3" style="color:#273159!important;">Portal de
-                            Consultas</h1>
+                        <h1 class="display-2 text-uppercase pb-sm-2 pb-md-3" style="color:#273159!important;">ICTIAIR</h1>
                         <p class="pb-3 pb-md-4 mb-3"
                            style="color:#273159!important;max-width: 520px;">{{ confi.descripcion }}</p>
                     </div>
