--- a/static/exhibiz/css/style.css
+++ b/static/exhibiz/css/style.css
@@ -3513,7 +3513,7 @@ border:solid 1px #ddd;
 	}
 	
 	.de_tab .de_nav li {
-	float: left;
+	float: center;
 	list-style: none;
 	background: #EEE;
 	margin-right: 5px;
