--- a/templates/public/landing/landing.html
+++ b/templates/public/landing/landing.html
@@ -8,8 +8,12 @@
             }
         }
 
+        .id-color-3{
+            color:#ffb9ff
+        }
+
         .size-50 {
-            font-size: 50px;
+            font-size: 70px;
         }
 
         .grey-hover {
@@ -129,7 +133,7 @@
 
                 <li data-transition="random-premium" data-slotamount="10" data-masterspeed="200" data-thumb="">
                     <!--  BACKGROUND IMAGE -->
-                    <img alt="" class="rev-slidebg" data-bgparallax="0" src="/static/exhibiz/images/slider/wide2.jpg">
+                    <img alt="" class="rev-slidebg" data-bgparallax="0" src="/static/images/conference.jpeg">
                 </li>
 
             </ul>
@@ -156,7 +160,7 @@
                         data-paddingbottom="[0,0,0,0]"
                         data-paddingleft="[0,0,0,0]"
                 >
-                    <span class="id-color-2">March 19, 2025</span>
+                    <span class="id-color-3">March 19, 2025</span>
                 </div>
 
                 <div
@@ -164,7 +168,7 @@
                         data-x="['center','center','center','center']"
                         data-hoffset="['0']"
                         data-y="['center','center','center','center']"
-                        data-lineheight="['50','50','50','50']"
+                        data-lineheight="['70','70','70','70']"
                         data-width="none"
                         data-height="none"
                         data-whitespace="nowrap"
@@ -271,6 +275,43 @@
 
 
 
+
+    <section id="section-sponsors" data-bgimage="url(static/exhibiz/images/bg/3.png) fixed center no-repeat">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3 text-center wow fadeInUp">
+                    <h1>Published by</h1>
+                    <div class="separator"><span><i class="fa fa-square"></i></span></div>
+                    <div class="spacer-single"></div>
+                </div>
+
+                <div class="col-md-12 text-center wow fadeInUp">
+                    <div class="spacer-single"></div>
+                    <img src="/static/images/iet.png" alt="" style="width:500px" class="grey-hover">
+                    <div class="spacer-double"></div>
+
+                    <h2>Indexed by</h2>
+                    <div class="spacer-single"></div>
+
+                    <div class="owl-carousel owl-theme vertical-carousel">
+                        <div class="item"><img src="/static/images/sponsor/Scopus.jpeg" alt="" class="grey-hover"></div>
+                        <div class="item"><img src="/static/images/sponsor/SJR.jpeg" alt="" class="grey-hover"></div>
+                        <div class="item"><img src="/static/images/sponsor/Compendex.png" alt="" class="grey-hover">
+                        </div>
+                        <div class="item"><img src="/static/images/sponsor/Logoweb.png" alt="" class="grey-hover"></div>
+                        <div class="item"><img src="/static/images/sponsor/unemilog.jpeg" alt="" class="grey-hover">
+                        </div>
+                        <div class="item"><img src="/static/images/sponsor/uclm.jpeg" alt="" class="grey-hover"></div>
+                        <div class="item"><img src="/static/images/sponsor/unemi.jpeg" alt="" class="grey-hover"></div>
+                        <div class="item"><img src="/static/images/sponsor/viu.jpeg" alt="" class="grey-hover"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
     <section id="section-countdown" aria-label="section" class="gradient-to-right pt40 pb40">
         <div class="container">
             <div class="row">
@@ -313,44 +354,6 @@
                     </div>
                 </div>
 
-            </div>
-        </div>
-    </section>
-
-
-
-    <section id="section-sponsors" data-bgimage="url(static/exhibiz/images/bg/3.png) fixed center no-repeat">
-        <div class="wm wm-border dark wow fadeInDown ">sponsors</div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 offset-md-3 text-center wow fadeInUp">
-                    <h1>Official Sponsors</h1>
-                    <div class="separator"><span><i class="fa fa-square"></i></span></div>
-                    <div class="spacer-single"></div>
-                </div>
-
-                <div class="col-md-12 text-center wow fadeInUp">
-                    <h3>Published by</h3>
-                    <div class="spacer-single"></div>
-                    <img src="/static/images/P-IET-1.png" alt="" style="width:500px" class="grey-hover">
-                    <div class="spacer-double"></div>
-
-                    <h3>Indexed by</h3>
-                    <div class="spacer-single"></div>
-
-                    <div class="owl-carousel owl-theme vertical-carousel">
-                        <div class="item"><img src="/static/images/sponsor/Scopus.jpeg" alt="" class="grey-hover"></div>
-                        <div class="item"><img src="/static/images/sponsor/SJR.jpeg" alt="" class="grey-hover"></div>
-                        <div class="item"><img src="/static/images/sponsor/Compendex.png" alt="" class="grey-hover">
-                        </div>
-                        <div class="item"><img src="/static/images/sponsor/Logoweb.png" alt="" class="grey-hover"></div>
-                        <div class="item"><img src="/static/images/sponsor/unemilog.jpeg" alt="" class="grey-hover">
-                        </div>
-                        <div class="item"><img src="/static/images/sponsor/uclm.jpeg" alt="" class="grey-hover"></div>
-                        <div class="item"><img src="/static/images/sponsor/unemi.jpeg" alt="" class="grey-hover"></div>
-                        <div class="item"><img src="/static/images/sponsor/viu.jpeg" alt="" class="grey-hover"></div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -481,7 +484,7 @@
                     </div>
                     <div class="details text-center mt-2">
                         <h4>Dra. Yudith Cardinale <a href="javascript:void(0)"
-                                                     class="btn btn-primary btn-rounded"><i
+                                                     class="btn btn-primary btn-rounded btn-mini"><i
                                 class="fa fa-linkedin"></i></a></h4>
 
                     </div>
@@ -507,8 +510,8 @@
                         </div>
                     </div>
                     <div class="details text-center mt-2">
-                        <h4>Dra. Alexandra La Cruz<a href="javascript:void(0)"
-                                                     class="btn btn-primary btn-rounded"><i
+                        <h4>Dra. Alexandra La Cruz <a href="javascript:void(0)"
+                                                     class="btn btn-primary btn-rounded btn-mini me-2"><i
                                 class="fa fa-linkedin"></i></a></h4>
 
                     </div>
@@ -534,8 +537,8 @@
                         </div>
                     </div>
                     <div class="details text-center mt-2">
-                        <h4>Dr. Diego Cabrera<a href="javascript:void(0)"
-                                                class="btn btn-primary btn-rounded"><i
+                        <h4>Dr. Diego Cabrera <a href="javascript:void(0)"
+                                                class="btn btn-primary btn-rounded btn-mini"><i
                                 class="fa fa-linkedin"></i></a></h4>
 
                     </div>
@@ -561,8 +564,8 @@
                         </div>
                     </div>
                     <div class="details text-center mt-2">
-                        <h4>Dra. Fania Pacheco<a href="javascript:void(0)"
-                                                 class="btn btn-primary btn-rounded"><i
+                        <h4>Dra. Fania Pacheco  <a href="javascript:void(0)"
+                                                 class="btn btn-primary btn-rounded btn-mini"><i
                                 class="fa fa-linkedin"></i></a></h4>
 
                     </div>
@@ -584,7 +587,7 @@
                         </div>
                         <div class="details text-center mt-2">
                             <h4>Fausto Pedro García Márquez <a href="javascript:void(0)"
-                                                               class="btn btn-primary btn-rounded"><i
+                                                               class="btn btn-primary btn-rounded btn-mini"><i
                                     class="fa fa-linkedin"></i></a></h4>
 
                         </div>
@@ -749,7 +752,7 @@
                             </div>
                             <div class="details text-center mt-2">
                                 <h5>Yudith Cardinale <a href="javascript:void(0)"
-                                                        class="btn btn-primary btn-rounded"><i
+                                                        class="btn btn-primary btn-rounded btn-mini"><i
                                         class="fa fa-linkedin"></i></a></h5>
 
                             </div>
