--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -176,7 +176,7 @@
     </script>
 </head>
 
-<body id="homepage">
+<body id="homepage" class="de_light">
 
 <div id="wrapper">
     {% include 'public/navbar.html' %}
