--- a/templates/public/footer.html
+++ b/templates/public/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row align-items-center ">
             <div class="col-md-3 text-center">
-                <h2 style="display: flex; align-items: center;margin-bottom:0;justify-content: center" class="text-center">
+                <h2 style="display: flex; align-items: center;margin-bottom:0;justify-content: center;color:#FFFFFF" class="text-center">
                     <div data-testid="svgRoot-comp-kk2o699z" class="AKxYR5 VZYmYf comp-kk2o699z"
                          style="margin-right: 15px;">
                         <svg preserveAspectRatio="xMidYMid meet" data-bbox="20.303 25.565 159.393 148.871"
@@ -30,16 +30,14 @@
 
             <div class="col-md-6 text-center">
                 &copy; Copyright 2024 - ICTIAIR - Event Conference Website
+
             </div>
 
             <div class="col-md-3 text-center">
                 <div class="social-icons">
-                    <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
-                    <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
-                    <a href="#"><i class="fa fa-rss fa-lg"></i></a>
-                    <a href="#"><i class="fa fa-google-plus fa-lg"></i></a>
-                    <a href="#"><i class="fa fa-skype fa-lg"></i></a>
-                    <a href="#"><i class="fa fa-dribbble fa-lg"></i></a>
+                    <a href="https://www.instagram.com/ictiair_conference/profilecard/?igsh=MWIxbWp0NDRnZGc1" target="_blank"><i class="fa fa-instagram fa-lg"></i></a>
+                    <a href="https://x.com/ICTIAIR" target="_blank"><i class="fa fa-twitter fa-lg"></i></a>
+                    <a class="btn-link text-light" href="mailto:ictiair@tiacon.org"><i class="fa fa-envelope"></i> ictiair@tiacon.org</a>
                 </div>
             </div>
         </div>
