--- a/templates/public/navbar.html
+++ b/templates/public/navbar.html
@@ -13,21 +13,31 @@
                 <!-- small button begin -->
                 <span id="menu-btn"></span>
                 <!-- small button close -->
-
-                <ul id="mainmenu" class="ms-2">
-                    <li><a href="#section-home" >Login<span></span></a></li>
-                    <li><a href="#section-about">Register<span></span></a></li>
-
-                </ul>
                 <!-- mainmenu begin -->
                 <ul id="mainmenu" class="ms-2">
-                    <li><a href="#section-home">Home<span></span></a></li>
-                    <li><a href="#section-sponsors">Sponsors<span></span></a></li>
-                    <li><a href="#section-speakers">Committee<span></span></a></li>
-                    <li><a href="#section-schedule">Schedule<span></span></a></li>
-
+                    <li><a href="#section-hero">Home<span></span></a></li>
+                    <li><a href="#section-hero">Sponsors<span></span></a></li>
+                    <li><a href="#section-importante">For authors<span></span></a>
+                        <ul>
+                            <li><a href="#importantdates">Important Dates</a></li>
+{#                            <li><a href="#">Camera-Ready</a></li>#}
+                            <li><a href="#guidelines">Guidelines</a></li>
+                            <li><a href="#callforpapers">Call for Papers</a></li>
+                            <li><a href="#callforpapers">Templates</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#section-topics">Topics<span></span></a></li>
+                    <li><a href="#section-speakers">Committies<span></span></a>
+                        <ul>
+{#                            <li><a href="#speakers">Speakers</a></li>#}
+                            <li><a href="#org_comite">Organizing Committee</a></li>
+                            <li><a href="#gen_chairs">General Chairs</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#section-contacts">Contact US<span></span></a></li>
+                    <li><a href="#section-contacts">Login<span></span></a></li>
+                    <li><a href="#section-contacts">Register<span></span></a></li>
                 </ul>
-
 
 
             </div>
