--- a/static/exhibiz/css/style.css
+++ b/static/exhibiz/css/style.css
@@ -671,7 +671,7 @@ overflow:visible;
 	
 	
 	#mainmenu ul li:hover > a{
-	color:#222;
+	color: #efebe5;
 	}
 	
 	header.header-mobile #mainmenu li ul {
