--- a/templates/public/navbar.html
+++ b/templates/public/navbar.html
@@ -29,14 +29,14 @@
                     <li><a href="#section-topics">Topics<span></span></a></li>
                     <li><a href="#section-speakers">Committies<span></span></a>
                         <ul>
-{#                            <li><a href="#speakers">Speakers</a></li>#}
+                            <li><a href="#speakers">Speakers</a></li>
                             <li><a href="#org_comite">Organizing Committee</a></li>
                             <li><a href="#gen_chairs">General Chairs</a></li>
                         </ul>
                     </li>
                     <li><a href="#section-contacts">Contact US<span></span></a></li>
-                    <li><a href="#section-contacts">Login<span></span></a></li>
-                    <li><a href="#section-contacts">Register<span></span></a></li>
+                    <li><a href="/login/">Login<span></span></a></li>
+                    <li><a href="/register/">Register<span></span></a></li>
                 </ul>
 
 
