--- a/static/exhibiz/css/colors/magenta.css
+++ b/static/exhibiz/css/colors/magenta.css
@@ -1,4 +1,4 @@
 :root {
-  --primary-color-1:#ec167f;
-  --secondary-color:#883ff9;
+  --primary-color-1: #060a38;
+  --secondary-color: #0f54ef;
 }
