--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -152,9 +152,9 @@
             border-radius: 10px;
         }
 
-         .btn-rounded{
+        .btn-rounded {
             border-radius: 50px;
-         }
+        }
 
     </style>
     <!-- Import Google Font-->
@@ -164,9 +164,10 @@
           id="google-font">
     <!-- Import Google Font-->
     <link rel="stylesheet" media="screen" href="/static/landing/assets/vendor/swiper/swiper-bundle.min.css"/>
-    <link rel="stylesheet" media="screen" href="/static/landing/assets/vendor/lightgallery/css/lightgallery-bundle.min.css"/>
-{#    <link rel="stylesheet" media="screen" href="/static/landing/assets/css/theme.min.css?15">#}
-{#    <link rel="stylesheet" media="screen" href="/static/extracss.css?23">#}
+    <link rel="stylesheet" media="screen"
+          href="/static/landing/assets/vendor/lightgallery/css/lightgallery-bundle.min.css"/>
+    {#    <link rel="stylesheet" media="screen" href="/static/landing/assets/css/theme.min.css?15">#}
+    {#    <link rel="stylesheet" media="screen" href="/static/extracss.css?23">#}
     <link rel="stylesheet" media="screen" href="/static/loading.css?1">
     {% block head %}{% endblock %}
     <script>
@@ -187,9 +188,6 @@
         {% include 'public/footer.html' %}
     </div>
 </div>
-
-
-
 
 
 <script src="/static/landing/assets/js/jquery-3.6.1.min.js"></script>
@@ -239,6 +237,7 @@
 <link rel="stylesheet" href="/static/OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
 <link rel="stylesheet" href="/static/OwlCarousel2-2.3.4/dist/assets/owl.theme.default.min.css">
 <script src="/static/OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
+<script src="/static/assets/plugins/bootstrap-show-password/dist/bootstrap-show-password.js?v=1"></script>
 <!-- Datatable -->
 {#<link rel="stylesheet" href="/static/datatables/datatables.css">#}
 {#<script src="/static/datatables/datatables.js"></script>#}
@@ -263,7 +262,6 @@
 {#<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.flash.min.js"></script>#}
 {#<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>#}
 {#<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.colVis.min.js"></script>#}
-
 
 
 <script src="/static/exhibiz/js/plugins.js"></script>
@@ -480,7 +478,7 @@
     {#        "url": '/static/js/i18n/Spanish.json'#}
     {#    },#}
     {#    buttons: []#}
-    {#});#}
+    {# }); #}
     {#tablaResp.buttons().container().appendTo('.tabla-responsive .col-md-6:eq(0)');#}
 </script>
 {% include 'service_worker_unregister.html' %}
