feat: actualizar modelos de CommitteeMember agregando rol y descripction_rol y actualizar landinpage

--- a/landing/templates/conference/committee_member/form.html
+++ b/landing/templates/conference/committee_member/form.html
@@ -58,7 +58,7 @@
             });
         });
         $(document).ready(function () {
-            var imagenprincipal = $('#id_image').dropify({
+            var imagenprincipal = $('#id_photo').dropify({
                 messages: {
                     default: 'Arrastre y suelte un archivo o haga clic aquí.',
                     replace: 'Arrastre y suelte un archivo o haga clic aquí.',
