--- a/landing/templates/conference/committee_member/listado.html
+++ b/landing/templates/conference/committee_member/listado.html
@@ -25,7 +25,7 @@
 
     <div class="mb-3">
         <a href="?action=add&{{ dict_url_vars }}" class="btn btn-success"><i class="fas fa-plus-circle mr-2"></i>
-            Nuevo Tema</a>
+            Nueva Categoría de comite</a>
     </div>
 
 
@@ -39,7 +39,16 @@
                             Categoría
                         </th>
                         <th class="text-center">
-                            Contenido
+                            Nombre
+                        </th>
+                        <th class="text-center">
+                            Foto
+                        </th>
+                        <th class="text-center">
+                            Grado
+                        </th>
+                        <th class="text-center">
+                            Redes sociales
                         </th>
                         <th class="text-center">
                             Acción
@@ -54,6 +63,59 @@
                             </td>
                             <td style="text-align: center">
                                 {{ l.name }}
+                            </td>
+                            <td style="text-align: center">
+                                {{ l.degree }}
+                            </td>
+                            <td style="text-align: center">
+                                {% if l.photo == '' %}
+                                    S/A
+                                {% else %}
+                                    <a href="{{ l.photo.url }}" data-lightbox="roadtrip"
+                                       title="{{ l.name }}">
+                                        <img id="presentaimg2" src="{{ l.photo.url }}"
+                                             class="img-thumbnail"
+                                             width="50px" align="middle"
+                                             alt="...">
+                                    </a>
+                                {% endif %}
+                            </td>
+                            <td style="text-align: center">
+                                {% if l.linkedin %}
+                                    <a href="{{ l.linkedin }}"
+                                       target="_blank">
+                                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                                    </a>
+                                    <br>
+                                {% endif %}
+                                {% if l.facebook %}
+                                    <a href="{{ l.facebook }}"
+                                       target="_blank">
+                                        <i class="fa fa-facebook-square" aria-hidden="true"></i>
+                                    </a>
+                                    <br>
+                                {% endif %}
+                                {% if l.instagram %}
+                                    <a href="{{ l.instagram }}"
+                                       target="_blank">
+                                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                                    </a>
+                                    <br>
+                                {% endif %}
+                                {% if l.x %}
+                                    <a href="{{ l.x }}"
+                                       target="_blank">
+                                        <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                                    </a>
+                                    <br>
+                                {% endif %}
+                                {% if l.youtube %}
+                                    <a href="{{ l.youtube }}"
+                                       target="_blank">
+                                        <i class="fa fa-youtube-square" aria-hidden="true"></i>
+                                    </a>
+                                    <br>
+                                {% endif %}
                             </td>
                             <td class="with-btn-group text-center" nowrap>
                                 <div class="btn-group dropleft">
