--- a/landing/templates/conference/guideline/listado.html
+++ b/landing/templates/conference/guideline/listado.html
@@ -25,7 +25,7 @@
 
     <div class="mb-3">
         <a href="?action=add&{{ dict_url_vars }}" class="btn btn-success"><i class="fas fa-plus-circle mr-2"></i>
-            Nuevo Sponsor</a>
+            Nuevo lineamiento</a>
     </div>
 
 
@@ -36,10 +36,10 @@
                     <thead class="thead-dark">
                     <tr>
                         <th class="text-center">
-                            Sponsor
+                            Categoría
                         </th>
                         <th class="text-center">
-                            Imagen
+                            Contenido
                         </th>
                         <th class="text-center">
                             Acción
@@ -50,20 +50,10 @@
                     {% for l in listado %}
                         <tr>
                             <td style="text-align: center">
-                                {{ l.name }}
+                                {{ l.guideline_type }}
                             </td>
                             <td style="text-align: center">
-                                {% if l.image == '' %}
-                                    S/A
-                                {% else %}
-                                    <a href="{{ l.image.url }}" data-lightbox="roadtrip"
-                                       title="{{ l.name }}">
-                                        <img id="presentaimg2" src="{{ l.image.url }}"
-                                             class="img-thumbnail"
-                                             width="50px" align="middle"
-                                             alt="...">
-                                    </a>
-                                {% endif %}
+                                {{ l.content }}
                             </td>
                             <td class="with-btn-group text-center" nowrap>
                                 <div class="btn-group dropleft">
