--- a/landing/templates/conference/summary/listado.html
+++ b/landing/templates/conference/summary/listado.html
@@ -25,7 +25,7 @@
 
     <div class="mb-3">
         <a href="?action=add&{{ dict_url_vars }}" class="btn btn-success"><i class="fas fa-plus-circle mr-2"></i>
-            Nuevo Sponsor</a>
+            Nuevo Resumen</a>
     </div>
 
 
@@ -36,10 +36,13 @@
                     <thead class="thead-dark">
                     <tr>
                         <th class="text-center">
-                            Sponsor
+                            Titulo
                         </th>
                         <th class="text-center">
-                            Imagen
+                            Descripción
+                        </th>
+                        <th class="text-center">
+                            ¿Activo?
                         </th>
                         <th class="text-center">
                             Acción
@@ -50,19 +53,16 @@
                     {% for l in listado %}
                         <tr>
                             <td style="text-align: center">
-                                {{ l.name }}
+                                {{ l.title }}
                             </td>
                             <td style="text-align: center">
-                                {% if l.image == '' %}
-                                    S/A
+                                {{ l.description }}
+                            </td>
+                            <td style="text-align: center">
+                                {% if l.activo %}
+                                    SI
                                 {% else %}
-                                    <a href="{{ l.image.url }}" data-lightbox="roadtrip"
-                                       title="{{ l.name }}">
-                                        <img id="presentaimg2" src="{{ l.image.url }}"
-                                             class="img-thumbnail"
-                                             width="50px" align="middle"
-                                             alt="...">
-                                    </a>
+                                    NO
                                 {% endif %}
                             </td>
                             <td class="with-btn-group text-center" nowrap>
