--- a/landing/templates/conference/topic_category/listado.html
+++ b/landing/templates/conference/topic_category/listado.html
@@ -25,7 +25,7 @@
 
     <div class="mb-3">
         <a href="?action=add&{{ dict_url_vars }}" class="btn btn-success"><i class="fas fa-plus-circle mr-2"></i>
-            Nuevo Sponsor</a>
+            Nueva categoría del tema</a>
     </div>
 
 
@@ -36,10 +36,7 @@
                     <thead class="thead-dark">
                     <tr>
                         <th class="text-center">
-                            Sponsor
-                        </th>
-                        <th class="text-center">
-                            Imagen
+                            Nombre
                         </th>
                         <th class="text-center">
                             Acción
@@ -51,19 +48,6 @@
                         <tr>
                             <td style="text-align: center">
                                 {{ l.name }}
-                            </td>
-                            <td style="text-align: center">
-                                {% if l.image == '' %}
-                                    S/A
-                                {% else %}
-                                    <a href="{{ l.image.url }}" data-lightbox="roadtrip"
-                                       title="{{ l.name }}">
-                                        <img id="presentaimg2" src="{{ l.image.url }}"
-                                             class="img-thumbnail"
-                                             width="50px" align="middle"
-                                             alt="...">
-                                    </a>
-                                {% endif %}
                             </td>
                             <td class="with-btn-group text-center" nowrap>
                                 <div class="btn-group dropleft">
