--- a/landing/templates/conference/summary/listado.html
+++ b/landing/templates/conference/summary/listado.html
@@ -45,6 +45,9 @@
                             ¿Activo?
                         </th>
                         <th class="text-center">
+                            Público
+                        </th>
+                        <th class="text-center">
                             Acción
                         </th>
                     </tr>
@@ -60,6 +63,13 @@
                             </td>
                             <td style="text-align: center">
                                 {% if l.activo %}
+                                    SI
+                                {% else %}
+                                    NO
+                                {% endif %}
+                            </td>
+                            <td style="text-align: center">
+                                {% if l.public %}
                                     SI
                                 {% else %}
                                     NO
