--- a/landing/templates/conference/topic_category/listado.html
+++ b/landing/templates/conference/topic_category/listado.html
@@ -39,6 +39,9 @@
                             Nombre
                         </th>
                         <th class="text-center">
+                            Público
+                        </th>
+                        <th class="text-center">
                             Acción
                         </th>
                     </tr>
@@ -48,6 +51,13 @@
                         <tr>
                             <td style="text-align: center">
                                 {{ l.name }}
+                            </td>
+                            <td style="text-align: center">
+                                {% if l.public %}
+                                    SI
+                                {% else %}
+                                    NO
+                                {% endif %}
                             </td>
                             <td class="with-btn-group text-center" nowrap>
                                 <div class="btn-group dropleft">
