--- a/templates/public/navbar.html
+++ b/templates/public/navbar.html
@@ -15,26 +15,26 @@
                 <!-- small button close -->
                 <!-- mainmenu begin -->
                 <ul id="mainmenu" class="ms-2">
-                    <li><a href="#section-hero">Home<span></span></a></li>
-                    <li><a href="#section-hero">Sponsors<span></span></a></li>
-                    <li><a href="#section-importante">For authors<span></span></a>
+                    <li><a href="/#section-hero">Home<span></span></a></li>
+                    <li><a href="/#section-hero">Sponsors<span></span></a></li>
+                    <li><a href="/#section-importante">For authors<span></span></a>
                         <ul>
-                            <li><a href="#importantdates">Important Dates</a></li>
+                            <li><a href="/#importantdates">Important Dates</a></li>
 {#                            <li><a href="#">Camera-Ready</a></li>#}
-                            <li><a href="#guidelines">Guidelines</a></li>
-                            <li><a href="#callforpapers">Call for Papers</a></li>
-                            <li><a href="#callforpapers">Templates</a></li>
+                            <li><a href="/#guidelines">Guidelines</a></li>
+                            <li><a href="/#callforpapers">Call for Papers</a></li>
+                            <li><a href="/#callforpapers">Templates</a></li>
                         </ul>
                     </li>
-                    <li><a href="#section-topics">Topics<span></span></a></li>
-                    <li><a href="#section-speakers">Committies<span></span></a>
+                    <li><a href="/#section-topics">Topics<span></span></a></li>
+                    <li><a href="/#section-speakers">Committies<span></span></a>
                         <ul>
-                            <li><a href="#speakers">Speakers</a></li>
-                            <li><a href="#org_comite">Organizing Committee</a></li>
-                            <li><a href="#gen_chairs">General Chairs</a></li>
+                            <li><a href="/#speakers">Speakers</a></li>
+                            <li><a href="/#org_comite">Organizing Committee</a></li>
+                            <li><a href="/#gen_chairs">General Chairs</a></li>
                         </ul>
                     </li>
-                    <li><a href="#section-contacts">Contact US<span></span></a></li>
+                    <li><a href="/#section-contacts">Contact US<span></span></a></li>
                     <li><a href="/login/">Login<span></span></a></li>
                     <li><a href="/register/">Register<span></span></a></li>
                 </ul>
