--- a/templates/public/navbar.html
+++ b/templates/public/navbar.html
@@ -36,13 +36,9 @@
                     </li>
                     <li><a href="/#section-contacts">Contact US<span></span></a></li>
                     <li><a href="/login/">Login<span></span></a></li>
-                    <li><a href="/register/">Register<span></span></a></li>
+{#                    <li><a href="/register/">Register<span></span></a></li>#}
                 </ul>
-
-
             </div>
-
-
         </div>
     </div>
 </header>
