--- a/templates/public/landing/landing.html
+++ b/templates/public/landing/landing.html
@@ -1145,7 +1145,7 @@
 
                             <div class="col-md-12 text-center">
                                 <p id='submit'>
-                                    <input type='submit' id='send_message' value='Send Email' class="btn btn-line">
+                                    <input type='submit' id='send_message' value='Send Email' class="btn btn-primary">
                                 </p>
                                 <div id='mail_success' class='success'>Your message has been sent successfully.</div>
                                 <div id='mail_fail' class='error'>Sorry, error occured this time sending your message.
