--- a/templates/public/navbar.html
+++ b/templates/public/navbar.html
@@ -20,7 +20,7 @@
                     <li><a href="/#section-importante">For authors<span></span></a>
                         <ul>
                             <li><a href="/#importantdates">Important Dates</a></li>
-{#                            <li><a href="#">Camera-Ready</a></li>#}
+                            {#                            <li><a href="#">Camera-Ready</a></li>#}
                             <li><a href="/#guidelines">Guidelines</a></li>
                             <li><a href="/#callforpapers">Call for Papers</a></li>
                             <li><a href="/#callforpapers">Templates</a></li>
@@ -35,8 +35,18 @@
                         </ul>
                     </li>
                     <li><a href="/#section-contacts">Contact US<span></span></a></li>
-                    <li><a href="/login/">Login<span></span></a></li>
-{#                    <li><a href="/register/">Register<span></span></a></li>#}
+{#                    {% if not request.user.is_authenticated %}#}
+{#                        <li><a href="/login/">Login<span></span></a></li>#}
+{#                    {% else %}#}
+{#                        <li><a href="/#section-speakers">Hello, {{ request.user.primernombre }}<span></span></a>#}
+{#                            <ul>#}
+{#                                <li><a href="/#speakers">Speakers</a></li>#}
+{#                                <li><a href="/#org_comite">Organizing Committee</a></li>#}
+{#                                <li><a href="/#gen_chairs">General Chairs</a></li>#}
+{#                            </ul>#}
+{#                        </li>#}
+{#                    {% endif %}#}
+                    {#                    <li><a href="/register/">Register<span></span></a></li>#}
                 </ul>
             </div>
         </div>
