--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -156,6 +156,18 @@
             border-radius: 50px;
         }
 
+        #mainmenu li a:after {
+            color: #ff8100;
+        }
+
+
+        #mainmenu li a:hover {
+            color: #ff8100;
+        }
+
+
+
+
     </style>
     <!-- Import Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
