--- a/static/exhibiz/css/plugins.css
+++ b/static/exhibiz/css/plugins.css
@@ -3313,35 +3313,35 @@ Copyright (c) 2013 Daniel Eden
 }
 
 /* jpreloader */
-#jpreOverlay {
-    background-color: #000000;
-    position:absolute;
-    width:100%;
-    height:100%;
-}
-.de_light #jpreOverlay{
-    background: #ffffff;
-}
-#jpreSlide{
-    font-size:22px;
-    color:#ccc;
-    text-align:center;
-    width:50%;
-    height:30%;
-}
-#jpreLoader{
-    position: absolute;
-    top: 50% !important;
-    width:400px;
-    height:2px;
-    background:#111;
-    border-radius:25px;
-    -moz-border-radius:25px;
-    -webkit-border-radius:25px;
-}
-.de_light #jpreLoader{
-    background: #F2F2F2;
-}
+/*#jpreOverlay {*/
+/*    background-color: #000000;*/
+/*    position:absolute;*/
+/*    width:100%;*/
+/*    height:100%;*/
+/*}*/
+/*.de_light #jpreOverlay{*/
+/*    background: #ffffff;*/
+/*}*/
+/*#jpreSlide{*/
+/*    font-size:22px;*/
+/*    color:#ccc;*/
+/*    text-align:center;*/
+/*    width:50%;*/
+/*    height:30%;*/
+/*}*/
+/*#jpreLoader{*/
+/*    position: absolute;*/
+/*    top: 50% !important;*/
+/*    width:400px;*/
+/*    height:2px;*/
+/*    background:#111;*/
+/*    border-radius:25px;*/
+/*    -moz-border-radius:25px;*/
+/*    -webkit-border-radius:25px;*/
+/*}*/
+/*.de_light #jpreLoader{*/
+/*    background: #F2F2F2;*/
+/*}*/
 #jpreBar {
     background:#222;
     border-radius:25px;
@@ -3349,19 +3349,19 @@ Copyright (c) 2013 Daniel Eden
     -webkit-border-radius:25px;
 }
 
-#jprePercentage {
-    color:#111;
-    z-index:-1;
-    font-family:Arial,Helvetica,sans-serif;
-    text-align:center;
-    margin-top:10px;
-    font-size:96px;
-    margin-top:-10px;
-}
+/*#jprePercentage {*/
+/*    color:#111;*/
+/*    z-index:-1;*/
+/*    font-family:Arial,Helvetica,sans-serif;*/
+/*    text-align:center;*/
+/*    margin-top:10px;*/
+/*    font-size:96px;*/
+/*    margin-top:-10px;*/
+/*}*/
 
-.de_light #jprePercentage{
-    color: #eeeeee;
-}
+/*.de_light #jprePercentage{*/
+/*    color: #eeeeee;*/
+/*}*/
 
 #jSplash{
     line-height:200%;
