--- a/templates/public/navbar.html
+++ b/templates/public/navbar.html
@@ -15,37 +15,62 @@
                 <!-- small button close -->
                 <!-- mainmenu begin -->
                 <ul id="mainmenu" class="ms-2">
-                    <li><a href="/#section-hero">Home<span></span></a></li>
-                    <li><a href="/#section-hero">Sponsors<span></span></a></li>
-                    <li><a href="/#section-importante">For authors<span></span></a>
+                    <li><a href="/">Home<span></span></a></li>
+
+                    <li>
+                        <a href="{% if request.path == '/' %}/#section-hero{% else %}/{% endif %}">Sponsors<span></span></a>
+                    </li>
+
+                    <li>
+                        <a href="{% if request.path == '/' %}/#section-importante{% else %}/{% endif %}">For
+                            authors<span></span></a>
                         <ul>
-                            <li><a href="/#importantdates">Important Dates</a></li>
-                            {#                            <li><a href="#">Camera-Ready</a></li>#}
-                            <li><a href="/#guidelines">Guidelines</a></li>
-                            <li><a href="/#callforpapers">Call for Papers</a></li>
-                            <li><a href="/#callforpapers">Templates</a></li>
+                            <li>
+                                <a href="{% if request.path == '/' %}/#importantdates{% else %}/{% endif %}">Important
+                                    Dates</a></li>
+                            <li><a href="{% if request.path == '/' %}/#guidelines{% else %}/{% endif %}">Guidelines</a>
+                            </li>
+                            <li>
+                                <a href="{% if request.path == '/' %}/#callforpapers{% else %}/{% endif %}">Call
+                                    for Papers</a></li>
+                            <li>
+                                <a href="{% if request.path == '/' %}/#callforpapers{% else %}/{% endif %}">Templates</a>
+                            </li>
                         </ul>
                     </li>
-                    <li><a href="/#section-topics">Topics<span></span></a></li>
-                    <li><a href="/#section-speakers">Committies<span></span></a>
+
+                    <li><a href="{% if request.path == '/' %}/#section-topics{% else %}/s{% endif %}">Topics<span></span></a>
+                    </li>
+
+                    <li><a href="{% if request.path == '/' %}/#section-speakers{% else %}/{% endif %}">Committees<span></span></a>
                         <ul>
-                            <li><a href="/#speakers">Speakers</a></li>
-                            <li><a href="/#org_comite">Organizing Committee</a></li>
-                            <li><a href="/#gen_chairs">General Chairs</a></li>
+                            <li>
+                                <a href="{% if request.path == '/' %}/#speakers{% else %}/{% endif %}">Speakers</a>
+                            </li>
+                            <li><a href="{% if request.path == '/' %}/#org_comite{% else %}/{% endif %}">Organizing
+                                Committee</a></li>
+                            <li><a href="{% if request.path == '/' %}/#gen_chairs{% else %}/{% endif %}">General
+                                Chairs</a></li>
                         </ul>
                     </li>
-                    <li><a href="/#section-contacts">Contact US<span></span></a></li>
-{#                    {% if not request.user.is_authenticated %}#}
-{#                        <li><a href="/login/">Login<span></span></a></li>#}
-{#                    {% else %}#}
-{#                        <li><a href="/#section-speakers">Hello, {{ request.user.primernombre }}<span></span></a>#}
-{#                            <ul>#}
-{#                                <li><a href="/#speakers">Speakers</a></li>#}
-{#                                <li><a href="/#org_comite">Organizing Committee</a></li>#}
-{#                                <li><a href="/#gen_chairs">General Chairs</a></li>#}
-{#                            </ul>#}
-{#                        </li>#}
-{#                    {% endif %}#}
+
+                    <li><a href="{% if request.path == '/' %}/#section-contacts{% else %}/{% endif %}">Contact
+                        US<span></span></a></li>
+                    {% if not request.user.is_authenticated %}
+                        <li><a href="/login/">Login<span></span></a></li>
+                    {% else %}
+                        <li><a href="javascript:void(0)">Hello, {{ request.user.primernombre }}<span></span></a>
+                            <ul>
+                                <li><a href="/panel/"><i class="fa fa-lock"></i> Administration</a></li>
+                                <li><a href="/logout/"><i class="fa fa-sign-out"></i> Log Out</a></li>
+                                {% if sesion_anterior %}
+
+                                    <li><a href="/seguridad/regresar-sesion/?path={{ request.path }}"><i
+                                            class="fa fa-user"></i> Return to my session</a></li>
+                                {% endif %}
+                            </ul>
+                        </li>
+                    {% endif %}
                     {#                    <li><a href="/register/">Register<span></span></a></li>#}
                 </ul>
             </div>
