--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -493,8 +493,8 @@
     {# }); #}
     {#tablaResp.buttons().container().appendTo('.tabla-responsive .col-md-6:eq(0)');#}
 </script>
-{% include 'service_worker_unregister.html' %}
-<script src="/static/webpush/registerSw.js?v=3.0"></script>
+{#{% include 'service_worker_unregister.html' %}#}
+{#<script src="/static/webpush/registerSw.js?v=3.0"></script>#}
 {% block jscript %}
 {% endblock %}
 
